src/test/deca/context/invalid/homemade/tests/test372_appel_methode_inexistante.deca
// test invalide de la règle 3.72


class A{

    int x = 3;
}

{
    int c = 3;
    A a = new A();
    a.c(3);
}